--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -3,11 +3,10 @@
         "module": "commonjs",
         "esModuleInterop": true,
         "target": "es6",
-        "noImplicitAny": false,
+        "noImplicitAny": true,
         "moduleResolution": "node",
         "sourceMap": true,
         "outDir": "dist",
-        "skipLibCheck": true,
         "baseUrl": ".",
         "paths": {
             "*": [
